# Market-Intelligence-Agent

./: .env.example  .gitignore  CLAUDE.md  README.md  WARREN_BRAIN_DOCUMENTATION.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: data-auditor.md
.claude/commands/: analyze.md  clear-cache.md  mcp-analyze.md
.claude/hooks/: validate-env.sh
.claude/rules/: api-conventions.md  code-style.md  guardrails.md  testing.md
.claude/skills/analysis/: SKILL.md
.devcontainer/: devcontainer.json
src/warren_brain/: __init__.py  config.py  guardrails.py  llm.py  main.py
src/warren_brain/agents/: base.py  buffett_brain.py  fundamentals.py  ontology.py  portfolio_manager.py  risk.py  sentiment.py  technicals.py  thirteen_f.py
src/warren_brain/backtest/: engine.py
src/warren_brain/data/: cache.py  database.py  edgar.py  market_data.py  massive.py  models.py  news.py  repository.py
src/warren_brain/graph/: state.py  workflow.py
src/warren_brain/mcp/: agent.py  tools.py
src/warren_brain/ui/: dashboard.py
tests/: test_agents.py  test_data.py  test_workflow.py
