[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "warren-brain"
version = "0.1.0"
description = "Agentic Investment Intelligence — Buffett-style multi-agent stock analysis"
requires-python = ">=3.10"
dependencies = [
    # Orchestration
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.50.0",
    # Market data
    "yfinance>=0.2.44",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    # Data processing
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "ta>=0.11.0",               # technical indicators (pandas-ta not py3.11 compatible)
    # Config & validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    # Backtesting
    "vectorbt>=0.26.1",
    # UI
    "streamlit>=1.38.0",
    "plotly>=5.20.0",
    # Database (SQLite default; swap DATABASE_URL for PostgreSQL)
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",   # PostgreSQL driver
    "alembic>=1.13.0",          # schema migrations
    # Utilities
    "rich>=13.7.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[project.scripts]
warren = "warren_brain.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/warren_brain"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
